Fixing issue #10.